plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'group.aist'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'jakarta.mail:jakarta.mail-api:2.0.1'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'

	implementation 'jakarta.activation:jakarta.activation-api:2.0.1'

	configurations.all {
		exclude group: 'javax.mail', module: 'mail'
		exclude group: 'javax.activation', module: 'activation'
	}

	implementation group: 'com.google.zxing', name: 'core', version: '3.3.1'




	implementation group: 'com.google.zxing', name: 'javase', version: '3.3.1'

	implementation 'com.itextpdf:itext7-core:7.1.17'




	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.28.0'

	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
	implementation 'org.mapstruct:mapstruct-jdk8:1.5.2.Final'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.keycloak:keycloak-admin-client:25.0.1'

	implementation 'org.springframework.hateoas:spring-hateoas:2.3.1'

	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
